# moseq2-viz

./: .gitignore  .pdm-python  .travis.yml  Makefile  Pipfile  README.md  pyproject.toml  pytest.ini  setup.py  tox.ini
docs/: conf.py  index.rst  make_doc.md  modules.rst  moseq2_viz.helpers.rst  moseq2_viz.info.rst  moseq2_viz.io.rst  moseq2_viz.model.rst  moseq2_viz.scalars.rst
moseq2_viz/: __init__.py  cli.py  gui.py  util.py  viz.py
moseq2_viz/helpers/: i_wrappers.py  wrappers.py
moseq2_viz/info/: util.py
moseq2_viz/interactive/: controller.py  view.py  widgets.py
moseq2_viz/io/: video.py
moseq2_viz/model/: dist.py  embed.py  fingerprint_classifier.py  label_util.py  stat.py  trans_graph.py  util.py
moseq2_viz/scalars/: util.py
moseq2_viz/tests/integration_tests/: test_cli.py  test_gui.py  test_viz.py
moseq2_viz/tests/unit_tests/: test_info_utils.py  test_io_video.py  test_model_dist.py  test_model_util.py  test_scalar_utils.py  test_train_label_util.py
scripts/: download_test_data.sh
tests/: test_cli.py  test_io_video.py  test_model_util.py
tests/integration_tests/: test_cli.py  test_gui.py  test_viz.py
tests/test_files/: info.yaml  mock_model.p  orig.txt  test_index.yaml
tests/test_files/_pca/: changepoints.h5  pca.h5  pca.yaml  pca_scores.h5
tests/test_files/proc/: results_00.h5  results_00.yaml  roi_00.tiff
tests/unit_tests/: test_info_utils.py  test_io_video.py  test_model_dist.py  test_model_embed.py  test_model_label_util.py  test_model_trans_graph.py  test_model_util.py  test_scalar_utils.py  test_train_label_util.py
