[tool.pdm]

[project]
name = "moseq2-viz"
version = "1.3.0"
description = "To boldly go where no mouse has gone before"
readme = "README.md"
authors = [
    {name = "Datta Lab"},
]
requires-python = ">=3.9,<3.13"
dependencies = [
    "click>=7.0",
    "cytoolz>=0.10.1",
    "dtaidistance>=1.2.3",
    "h5py>=2.10.0",
    "joblib>=0.15.1",
    "matplotlib>=3.1.2",
    "networkx>=2.4",
    "numpy>=1.18.3",
    "opencv-python>=4.1.2.30",
    "pandas>=1.0.5",
    "psutil>=5.6.7",
    "pyarrow>=12.0.1",
    "ruamel.yaml>=0.16.5",
    "scikit-learn>=0.20.3",
    "scipy>=1.3.2",
    "seaborn>=0.11.0",
    "tqdm>=4.48.0",
]

[project.scripts]
moseq2-viz = "moseq2_viz.cli:cli"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
